--- a/21_seguridad_y_autenticacion_basicas.ipynb
+++ b/21_seguridad_y_autenticacion_basicas.ipynb
@@ -179,7 +179,17 @@
     "Para poder crear unsuperuisuario se utiliza el siguiente comando desde una terminal localziada en el directorio del proyecto.\n",
     "\n",
     "```\n",
-    "pyhon3 manage.py createsuperuser --email=\"<correo electronico>\" --user=\"<usuario>\"\n",
+    "python3 manage.py createsuperuser --email=\"<correo electronico>\" --user=\"<usuario>\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**\n",
+    "```\n",
+    "python3 manage.py createsuperuser --email=\"falso@pythonista.io\" --user=\"admin\"\n",
     "```"
    ]
   },
@@ -597,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
