--- a/21_seguridad_y_autenticacion_basicas.ipynb
+++ b/21_seguridad_y_autenticacion_basicas.ipynb
@@ -49,20 +49,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "El middleware que utiliza *Django* por efecto es:\n",
-    "\n",
-    "* ```AuthenticationMiddleware```, el cual permite realizar la autenticación y autorización de acceso.\n",
-    "* ```SessionMiddleware```, el cual gestiona las sesiones."
+    "from tutorial.tutorial import settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.INSTALLED_APPS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  La clase  ```django.contrib.auth.models.User```.  \n",
+    "El middleware que utiliza *Django* por efecto es:\n",
+    "\n",
+    "* ```django.contrib.sessions.middleware.SessionMiddleware```, el cual permite realizar la autenticación y autorización de acceso.\n",
+    "* ```django.contrib.auth.middleware.AuthenticationMiddleware```, el cual gestiona las sesiones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.MIDDLEWARE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  El modelo  ```django.contrib.auth.models.User```.  \n",
     "\n",
     "Los usuarios y grupos en *Django* se crean mediante modelos predeterminados.\n",
     "\n",
@@ -109,6 +136,38 @@
     "* ```is_active``` es un valor de tipo ```bool``` que indica si el usuario está activo.\n",
     "* ```last_login``` es un valor de tipo ```datetime.datetime```con la fecha y hora del último acceso del usuario.\n",
     "* ```date_joined``` es un valor de tipo ```datetime.datetime```con la fecha y hora en la que el usuario fue creado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejemplo ilustrativo de creación de un suario desde  el shell.\n",
+    "\n",
+    "``` ipython\n",
+    "In [1]: from django.contrib.auth.models import User\n",
+    "\n",
+    "In [2]: User.objects.all()\n",
+    "Out[2]: <QuerySet []>\n",
+    "\n",
+    "In [3]: User.objects.create_user('josech', 'josech@gmail.com', '0p3n5t4ck')\n",
+    "Out[3]: <User: josech>\n",
+    "\n",
+    "In [4]: User.objects.all()\n",
+    "Out[4]: <QuerySet [<User: josech>]>\n",
+    "\n",
+    "\n",
+    "In [5]: usuario = User.objects.all()[0]\n",
+    "\n",
+    "In [5]: usuario\n",
+    "Out[5]: <User: josech>\n",
+    "\n",
+    "In [6]: usuario.is_superuser\n",
+    "Out[6]: False\n",
+    "\n",
+    "In [7]: usuario.is_superuser=True\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -211,7 +270,7 @@
    "source": [
     "### Definición del patrón de *URLs*.\n",
     "\n",
-    "El archivo ```src/22/urls.py``` contiene la siguiente definición de  ```urlpatterns``` ligando al módulo ``` django.contrib.auth.urls``` con la ruta ```usuarios/```.\n",
+    "El archivo ```src/21/urls.py``` contiene la siguiente definición de  ```urlpatterns``` ligando al módulo ``` django.contrib.auth.urls``` con la ruta ```usuarios/```.\n",
     "\n",
     "```python\n",
     "urlpatterns = [path('admin/', admin.site.urls), \n",
@@ -242,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp src/22/urls.py tutorial/tutorial/urls.py"
+    "!cp src/21/urls.py tutorial/tutorial/urls.py"
    ]
   },
   {
@@ -258,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy src\\22\\urls.py tutorial\\tutorial\\urls.py"
+    "!copy src\\21\\urls.py tutorial\\tutorial\\urls.py"
    ]
   },
   {
@@ -295,6 +354,15 @@
    "outputs": [],
    "source": [
     "%mkdir tutorial/templates/registration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%mkdir tutorial\\templates\\registration"
    ]
   },
   {
@@ -352,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuacion se copiará al script ```src/22/urls.py``` en el directorio ```tutorial/templates/registration/```."
+    "* A continuacion se copiará al script ```src/21/urls.py``` en el directorio ```tutorial/templates/registration/```."
    ]
   },
   {
@@ -368,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/22/login.html tutorial/templates/registration/"
+    "%cp src/21/login.html tutorial/templates/registration/"
    ]
   },
   {
@@ -384,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%copy src\\22\\login.html tutorial\\templates\\registration\\"
+    "%copy src\\21\\login.html tutorial\\templates\\registration\\"
    ]
   },
   {
@@ -409,7 +477,7 @@
    "source": [
     "### Configuración del redireccionamiento de ingreso exitoso.\n",
     "\n",
-    "El script ```src/22/settings.py``` define a ```/api/``` como la ruta a la que el navegador será redirigido en caso de que el acceso sea exitoso.\n",
+    "El script ```src/21/settings.py``` define a ```/api/``` como la ruta a la que el navegador será redirigido en caso de que el acceso sea exitoso.\n",
     "\n",
     "``` python\n",
     "LOGIN_REDIRECT_URL = '/api/'\n",
@@ -420,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se sustituirá al script ```tutorial/tutorial/settings.py``` con ```src/22/settings.py```."
+    "* A continuación se sustituirá al script ```tutorial/tutorial/settings.py``` con ```src/21/settings.py```."
    ]
   },
   {
@@ -436,7 +504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/22/settings.py tutorial/tutorial/settings.py"
+    "%cp src/21/settings.py tutorial/tutorial/settings.py"
    ]
   },
   {
@@ -452,7 +520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%copy src\\22\\settings.py tutorial\\tutorial\\settings.py"
+    "%copy src\\21\\settings.py tutorial\\tutorial\\settings.py"
    ]
   },
   {
@@ -500,14 +568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://localhost:8000/login"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://localhost:8000/logout"
+    "http://localhost:8000/accounts/login/"
    ]
   },
   {
