--- a/22_aplicaciones_autenticadas.ipynb
+++ b/22_aplicaciones_autenticadas.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/22/template_views.py tutorial/api/template_views.py"
+    "!cp src/22/template_views.py tutorial/api/template_views.py"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "% copy src\\22\\template_views.py tutorial\\api\\template_views.py"
+    "!copy src\\22\\template_views.py tutorial\\api\\template_views.py"
    ]
   },
   {
