--- a/23_panel _de_administracion.ipynb
+++ b/23_panel _de_administracion.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El paquete ```django.contrib import admin```.\n",
+    "## El paquete ```django.contrib.admin```.\n",
     "\n",
     "Este paquete contiene la biblioteca que gestiona la administración de modelos.\n",
     "\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
     "from django.contrib import admin\n",
     "from . import models import Alumno\n",
     "\n",
-    "admin.register(Alumno)\n",
+    "admin.site.register(Alumno)\n",
     "```"
    ]
   },
@@ -179,6 +179,33 @@
     "\n",
     "**Nota:** \n",
     "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql sqlite:///tutorial/db.sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql SELECT * FROM api_alumno"
    ]
   },
   {
