--- a/24_despliegue_de_un_proyecto.ipynb
+++ b/24_despliegue_de_un_proyecto.ipynb
@@ -67,6 +67,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cambio de la llave secreto del proyecto."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -156,9 +163,9 @@
     "    SECRET_KEY = f.read().strip()\n",
     "\n",
     "# SECURITY WARNING: don't run with debug turned on in production!\n",
-    "DEBUG = TRUE\n",
+    "DEBUG = False\n",
     "\n",
-    "ALLOWED_HOSTS = []\n",
+    "ALLOWED_HOSTS = ['localhost', '127.0.0.1', '[::1]']\n",
     "\n",
     "\n",
     "# Application definition\n",
@@ -267,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo cp src/24/settings.py /opt/django/tutorial/tutorial/"
+    "%cp src/24/settings.py /opt/django/tutorial/tutorial/"
    ]
   },
   {
@@ -324,6 +331,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## La base de datos de alumnos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp src/13/alumnos.json /opt/django/tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls /opt/django/tutorial/tutorial/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Creación del superusuario."
    ]
   },
@@ -347,7 +379,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El módulo *WSGI*."
+    "### La interfaz WSGI.\n",
+    "\n",
+    "https://www.python.org/dev/peps/pep-0333/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### El módulo *WSGI*.\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/howto/deployment/wsgi/"
    ]
   },
   {
@@ -390,13 +433,22 @@
     "<Files wsgi.py>\n",
     "Require all granted\n",
     "</Files>\n",
-    "</Directory\n",
+    "</Directory>\n",
     "\n",
     "Alias /static /opt/django/tutorial/static\n",
     "    <Directory /opt/django/tutoprial/static>\n",
     "        Require all granted\n",
     "    </Directory>\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /opt/oi/py201"
    ]
   },
   {
@@ -431,6 +483,24 @@
    "outputs": [],
    "source": [
     "! sudo systemctl reload apache2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp src/13/alumnos.json /opt/django/tutorial/tutorial/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql select * from db_django.api_alumno;"
    ]
   },
   {
