--- a/15_endpoints_de_la_api_rest.ipynb
+++ b/15_endpoints_de_la_api_rest.ipynb
@@ -64,15 +64,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd tutorial"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp ../src/15/urls.py api/urls.py"
+    "!cp src/15/urls.py tutorial/api/urls.py"
    ]
   },
   {
@@ -133,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy ..\\src\\15\\urls.py api\\urls.py"
+    "!copy src\\15\\urls.py tutorial\\api\\urls.py"
    ]
   },
   {
@@ -149,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pycat api\\urls.py"
+    "%pycat tutorial/api/urls.py"
    ]
   },
   {
@@ -291,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp ../src/15/endpoint_views.py api/endpoint_views.py"
+    "!cp src/15/endpoint_views.py tutorial/api/endpoint_views.py"
    ]
   },
   {
@@ -307,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy ..\\src\\15\\endpoint_views.py api\\endpoint_views.py"
+    "!copy src\\15\\endpoint_views.py tutorial\\api\\endpoint_views.py"
    ]
   },
   {
@@ -325,7 +316,7 @@
    },
    "outputs": [],
    "source": [
-    "%pycat api/endpoint_views.py"
+    "%pycat tutorial/api/endpoint_views.py"
    ]
   },
   {
@@ -346,6 +337,33 @@
    "outputs": [],
    "source": [
     "!./manage.py runserver 0.0.0.0:5000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql sqlite:///tutorial/db.sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql SELECT * FROM api_alumno;"
    ]
   },
   {
