--- a/16_cliente_api_rest.ipynb
+++ b/16_cliente_api_rest.ipynb
@@ -22,6 +22,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "respuesta = requests.get(\"http://localhost:8000/api/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "respuesta.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "respuesta.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "respuesta = requests.get(\"http://localhost:8000/api/1223\")"
    ]
   },
