--- a/18_lenguaje_de_plantillas_de_django.ipynb
+++ b/18_lenguaje_de_plantillas_de_django.ipynb
@@ -544,7 +544,7 @@
     "\n",
     "```html\n",
     "{% extends \"base.html\" %}\n",
-    "{% block encabezado %}Listado de alumnos{% endblock %}\n",
+    "{% block encabezado %}Listado de alumnos.{% endblock %}\n",
     "{% block cuerpo %}\n",
     "    <h1> Listado de alumnos.</h1>\n",
     "    {% for registro in lista %}\n",
