--- a/20_gestion_de_formularios.ipynb
+++ b/20_gestion_de_formularios.ipynb
@@ -552,6 +552,11 @@
     "{% extends \"base.html\" %}\n",
     "{% block encabezado %}Forma de alta {% endblock %}\n",
     "{% block cuerpo %}\n",
+    "    <style>\n",
+    "        form {margin: 20px}\n",
+    "        label {display: block};        }\n",
+    "        \n",
+    "    </style>\n",
     "    <form action=\"/api/alta/\" method=\"post\">\n",
     "        <div class=\"form-group\">\n",
     "            {% csrf_token %}\n",
@@ -630,7 +635,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://localhost:5000/api/alta/"
+    "http://localhost:8000/api/alta/"
    ]
   },
   {
