--- a/24_despliegue_en_un_servidor_lamp.ipynb
+++ b/24_despliegue_en_un_servidor_lamp.ipynb
@@ -70,6 +70,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### El archivo ```alumnos.json```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sudo cp src/13/alumnos.json /"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sudo chmod 777 /alumnos.json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Cambio de la llave secreto del proyecto."
    ]
   },
@@ -355,40 +380,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La base de datos de alumnos."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!sudo cp src/13/alumnos.json /"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!sudo chmod 777 /alumnos.json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!ls -l /opt/django/tutorial"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Creación del superusuario."
    ]
   },
@@ -455,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
