--- a/24_despliegue_en_un_servidor_lamp.ipynb
+++ b/24_despliegue_en_un_servidor_lamp.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo unzip src/24/tutorial.zip -d /opt/django"
+    "man unzip"
    ]
   },
   {
@@ -63,7 +63,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo chown -R oi:oi /opt/djang"
+    "!sudo unzip -q src/24/tutorial.zip -d /opt/django/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sudo chown -R oi:oi /opt/django"
    ]
   },
   {
@@ -79,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo cp src/13/alumnos.json /"
+    "!sudo cp src/14/alumnos.json /"
    ]
   },
   {
@@ -314,6 +323,11 @@
     "                           'PASSWORD': '0p3n5t4ck',\n",
     "                           'HOST': 'localhost',\n",
     "                           'PORT': 3306}}\n",
+    "```\n",
+    "\n",
+    "``` python\n",
+    "LOGIN_REDIRECT_URL = '/django/api/'\n",
+    "LOGIN_URL = '/django/accounts/login'\n",
     "```"
    ]
   },
@@ -400,28 +414,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "%sql select * from db_django.api_alumno;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"src/13/alumnos.json\", encoding=\"utf-8\") as archivo:\n",
-    "    respuesta = json.load(archivo)\n",
-    "print(respuesta)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -446,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
